# test_pantsbuild

./: .gitignore  README.md  pants.toml
.github/workflows/: pants.yaml
projects/api/: BUILD  pyproject.toml
projects/api/api/: main.py
projects/api/tests/: test_api.py
